Portfolio page fixes (#26)
* rm extra margin from project-card text

* added new turquoise colors to palette

* fixed portfolio page buttons color contrast

* use consistent selector for button group

* use aria-live container to announce changes to projects list

* renamed css vars for filter buttons

* cleaned up filter buttons markup

* hide project filters when javascript is disabled

* updated language of intro p

* reduce bottom margin of filters label

* adjust margins of intro p & filter label

--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -25,6 +25,10 @@
   --color-orange-2: #ffa047;
   --color-orange-3: #efc94c;
 
+  --color-turquoise: #307b6c;
+  --color-turquoise-dark: #334D5C;
+  --color-turquoise-light: #45b29d;
+
   --color-accent: var(--color-blue);
   --color-accent-focus: var(--color-blue-3);
   --color-accent-secondary: var(--color-blue-3);
